--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "^18.0.1",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
+    "nodemon": "^3.1.10",
     "npm": "^11.6.2",
     "socket.io": "^4.8.1"
   }
